--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "devDependencies": {
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-bundle-webtask": "^0.1.0",
-    "gulp-format-md": "^0.1.10"
+    "gulp-format-md": "^0.1.10",
+    "mocha": "^3.0.2"
   },
   "keywords": [
     "invite",
